# eora

./: .env.example  README.md  eora-db  main.py  pyproject.toml
scr/: config.py  settings.py
scr/ai/: assistant.py
scr/database/: __init__.py
