[project]
name = "eora"
version = "0.1.0"
description = "case"
authors = [
    {name = "Maksim Tarkin",email = "williamcano97@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "=3.12.3"
dependencies = [
    "openai (>=1.75.0,<2.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
